<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="0dp"
        android:background="@color/themeColor"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="设置"
            android:textColor="@color/themeTextColor"
            android:textSize="@dimen/themeTextSize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/gray_light_1"
        >

        <ScrollView
            android:id="@+id/scrollview_personal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/gray_light_1"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dip"
                >
                <LinearLayout
                    android:id="@+id/addrlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    >
                    <TextView
                        android:id="@+id/localTip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_marginRight="10dip"
                        android:text="@string/addr"
                        android:textColor="@color/gray"
                        android:textSize="15dip"
                        />
                    <EditText
                        android:id="@+id/serverAddr"
                        android:layout_width="150dip"
                        android:layout_height="36dip"
                        android:layout_marginBottom="20dip"
                        android:textColorHint="#AAAAAA"
                        android:textColor="#000000"
                        android:textSize="15dip"
                        android:singleLine="true"
                        android:hint="@string/ip_addr"
                        android:inputType="number"
                        android:digits="1234567890."
                        />
                    <EditText
                        android:id="@+id/serverPort"
                        android:layout_width="80dip"
                        android:layout_height="36dip"
                        android:layout_marginBottom="20dip"
                        android:textColorHint="#AAAAAA"
                        android:textColor="#000000"
                        android:textSize="15dip"
                        android:singleLine="true"
                        android:hint="@string/port_addr"
                        android:inputType="number"
                        android:digits="1234567890"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pathlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="0dip"
                    >
                    <TextView
                        android:id="@+id/fileTip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_marginRight="12dip"
                        android:text="@string/file"
                        android:textColor="@color/gray"
                        android:textSize="15dip"
                        />
                    <EditText
                        android:id="@+id/filePath"
                        android:layout_width="230dip"
                        android:layout_height="36dip"
                        android:layout_marginBottom="20dip"
                        android:textColorHint="#AAAAAA"
                        android:textColor="#000000"
                        android:textSize="15dip"
                        android:singleLine="true"
                        android:hint="@string/file_addr"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/localayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="0dip"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_marginRight="10dip"
                        android:text="@string/local"
                        android:textColor="@color/gray"
                        android:textSize="15dip"
                        />
                    <EditText
                        android:id="@+id/localip"
                        android:layout_width="230dip"
                        android:layout_height="36dip"
                        android:layout_marginBottom="20dip"
                        android:textColorHint="#AAAAAA"
                        android:textColor="@color/gray"
                        android:textSize="15dip"
                        android:singleLine="true"
                        android:hint="@string/localip"
                        android:enabled="false"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spinnerlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="0dip"
                    >
                    <Spinner
                        android:id="@+id/resoSpin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="0dip"
                    >
                    <Spinner
                        android:id="@+id/codecSpin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>